--- a/requirements.txt
+++ b/requirements.txt
@@ -14,7 +14,7 @@ certifi==2023.7.22
 cffi==1.15.1
 charset-normalizer==3.2.0
 click==8.1.6
-cryptography==41.0.2
+cryptography==41.0.3
 discord==2.3.1
 discord.py==2.3.1
 dnspython==2.4.1
@@ -32,12 +32,13 @@ MarkupSafe==2.1.3
 multidict==6.0.4
 multitasking==0.0.11
 nest-asyncio==1.5.7
-numpy==1.25.1
+numpy==1.23.2
 packaging==23.1
 pandas==2.0.3
 pycares==4.3.0
 pycparser==2.21
 pymongo==4.4.1
+pyOpenSSL==23.2.0
 python-dateutil==2.8.2
 pytz==2023.3
 requests==2.31.0
